# rpa-project

./: .gitignore  README.md  pyproject.toml
app/: dataworks_hive_apply.py  dw_cookies.py  main.py  rpa_excel.py
scripts/: test_headless_cookies_login.py
tests/: test_dw_cookies.py  test_rpa_excel.py
